<resources>
    <string name="app_name">欅坂46握手券マネージャー</string>


    <string-array name="list">
        <item>京都パルスプラザ</item>
        <item>パシフィコ横浜</item>
        <item>幕張メッセ</item>
        <item>ポートメッセなごや</item>
        <item>インテックス大阪</item>
    </string-array>

    <string-array name="nanbu">
        <item>1部</item>
        <item>2部</item>
        <item>3部</item>
        <item>4部</item>
        <item>5部</item>
        <item>6部</item>
    </string-array>


    <string-array name="more_add_list">
        <item>石森 虹花</item>
        <item>今泉 佑唯</item>
        <item>上村 莉菜</item>
        <item>尾関 梨香</item>
        <item>織田 奈那</item>
        <item>小池 美波</item>
        <item>小林 由依</item>
        <item>齋藤 冬優花</item>
        <item>佐藤 詩織</item>
        <item>志田 愛佳</item>
        <item>菅井 友香</item>
        <item>鈴本 美愉</item>
        <item>長沢 菜々香</item>
        <item>長濱 ねる</item>
        <item>土生 瑞穂</item>
        <item>原田 葵</item>
        <item>平手 友梨奈</item>
        <item>守屋 茜</item>
        <item>米谷 奈々未</item>
        <item>渡辺 梨加</item>
        <item>渡邉 理佐</item>
    </string-array>

    <string-array name="more_add_list2">
        <item>井口 眞緒</item>
        <item>潮 紗理菜</item>
        <item>柿崎 芽実</item>
        <item>影山 優佳</item>
        <item>加藤 史帆</item>
        <item>齊藤 京子</item>
        <item>佐々木 久美</item>
        <item>佐々木 美玲</item>
        <item>高瀬 愛奈</item>
        <item>高本 彩花</item>
        <item>東村 芽依</item>
        <item>金村 美玖</item>
        <item>河田 陽菜</item>
        <item>小坂 菜緒</item>
        <item>富田 鈴花</item>
        <item>丹生 明里</item>
        <item>濱岸 ひより</item>
        <item>松田 好花</item>
        <item>宮田 愛萌</item>
        <item>渡邉 美穂</item>
    </string-array>
    <string name="spnPrompt">プロンプトのテキスト</string>
    <string name="package_home">ホーム</string>
    <string name="package_more">イベント詳細</string>
    <string name="package_add">イベント追加</string>
    <string name="package_more_add">メンバー追加</string>

    <string name="optionmenu1">オプションメニュー</string>
    <string name="menutitle">アプリ情報</string>
    <string name="package_update">イベント変更</string>






    <string name="icon_pencil">&#xf040;</string>
    <string name="icon_member">&#xf2be;</string>
    <string name="icon_busuu">&#xf017;</string>
    <string name="icon_gabage">&#xf014;</string>
    <string name="icon_ticket">&#xf145;</string>
    <string name="icon_calendar">&#xf274;</string>
    <string name="icon_location">&#xf041;</string>
    <string name="icon_facebook">&#xf082;</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
